fix: nav_logo visibility for small screens

--- a/auctions/static/auctions/sidebar.css
+++ b/auctions/static/auctions/sidebar.css
@@ -132,6 +132,10 @@ a {
 }
 
 .hide-inner {
+    visibility: hidden !important;
+}
+
+.nav_logo {
     visibility: hidden;
 }
 
@@ -159,15 +163,6 @@ a {
         padding: 0 2rem 0 calc(var(--nav-width) + 2rem)
     }
 
-    .header_img {
-        width: 40px;
-        height: 40px
-    }
-
-    .header_img img {
-        width: 45px
-    }
-
     .l-navbar {
         left: 0;
         padding: 1rem 1rem 0 0
@@ -180,4 +175,9 @@ a {
     .body-pd {
         padding-left: calc(var(--nav-width) + 188px)
     }
+
+    .nav_logo {
+        visibility: visible;
+    }
+    
 }
